infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: library
  labels:
    pod-security.kubernetes.io/enforce: restricted
